2003-07-08  TAGA Yoshitaka  <tagga@tsuda.ac.jp>
	* doc/Makefile.am: The date is in UTC.
	* src/escm.c: Added HTTP_USER_AGENT to the list of environment
	variables to bind to Scheme variables.
	* doc/aescm.css: Added a stylesheet for documents in HTML formats.
	* doc/aescm.epod, doc/readme.escm: Updates.

2003-07-06  TAGA Yoshitaka  <tagga@tsuda.ac.jp>
	* configure.ac, acinclude.m4, src/Makefile.am, src/filter.c,
	src/fork.c: Enabled to make default another language than scheme.
	
2003-07-05  TAGA Yoshitaka  <tagga@tsuda.ac.jp>
	* src/escm.c, test/100span.test: Each line in literal mode is
	converted into a form.
	* doc/aescm.epod: Divided a very long string.
	* test/150comment.test: Removed the test for multiline comment.
	* src/escm.h, src/escm.c, src/filter.c, src/lang.c, src/lang.awk,
	src/lang/*: escm_define() is replaced with escm_bind() and
	escm_assign() and false with nil.

2003-07-01  TAGA Yoshitaka  <tagga@tsuda.ac.jp>
	*** version 0.19
	
2003-06-30  TAGA Yoshitaka  <tagga@tsuda.ac.jp>
	* doc/gimmick.escm, src/lang/*, src/lang.c, src/escm.h: Removed
	true field.
	* src/lang.awk, src/Makefile.am, src/escm.c: Automatically generate
	the default language structure.

2003-06-29  TAGA Yoshitaka  <tagga@tsuda.ac.jp>

	* doc/gimmick.escm, doc/interpreter.escm: Updated.
	* src/fork.c, src/filter.c: Check the exit status of the child
	process.
	
2003-06-28  TAGA Yoshitaka  <tagga@tsuda.ac.jp>

	* src/escm.c, src/filter.c, src/lang/scm, doc/filter.escm: Change
	the conversion rule of variable names.
	* acinclude.m4, src/filter.c, src/fork.c: The command line of the
	default interpreter is tokenized in configure.
	* src/escm.c, src/Makefile.am: bugfixes.
	* doc/Makefile.am, doc/aescm.epod: Rewrite part of documentation
	in POD format.
	* doc/filter.escm, doc/handler.escm, doc/library.escm: Removed.
	
2003-06-26  TAGA Yoshitaka  <tagga@tsuda.ac.jp>

	* src/meta_arg.c: Change interface.
	* src/cgi.c: Fix the content header.