@@ -2,6 +2,7 @@ dnl acinclude.m4
 dnl $Id$
 dnl Author: TAGA Yoshitaka <tagga@tsuda.ac.jp>
 
+# --with-backend="prog arg ..."
 AC_DEFUN([AC_ESCM_CHECK_BACKEND],
 [dnl
 if test "$with_backend" = "no"; then
@@ -26,5 +27,35 @@ AC_DEFINE_UNQUOTED(ESCM_BACKEND, ["$backend_prog"],
 	[Command line to invoke the backend interpreter.])
 backend_args=`echo $backend_prog | sed -e "s/  */\", \"/g"`
 AC_DEFINE_UNQUOTED(ESCM_BACKEND_ARGV, ["$backend_args"], [argv for the backend interpreter])
+])
+
+# --enable-handler
+AC_DEFUN([AC_ESCM_CHECK_HANDLER],
+[dnl
+ENABLE_HANDLER=1
+if test x$enable_handler = xno; then
+   enable_handler=no
+   ENABLE_HANDLER=
+elif test x$enable_handler = xyes || test x$enable_handler = x; then
+   if test -d $prefix/public_html; then
+      CGIBIN=$prefix/public_html/cgi-bin
+   elif test -d $prefix/cgi-bin; then
+      CGIBIN=$prefix/cgi-bin
+   else
+      for x in /Local/Library/WebServer/CGI-Executables /Library/WebServer/CGI-Executables /opt/apache/share/cgi-bin /boot/home/apache/cgi-bin /usr/local/apache/cgi-bin /usr/local/httpd/cgi-bin /usr/local/www/cgi-bin /usr/local/share/apache/cgi-bin /usr/share/apache/cgi-bin /var/apache/cgi-bin /var/www/cgi-bin; do
+	  if test -d $x; then
+	     CGIBIN=$x
+	     break
+          fi
+      done
+   fi
+else
+   CGIBIN=$enable_handler
+fi
+AC_SUBST(CGIBIN)
+AM_CONDITIONAL(HANDLER, test "$enable_handler" != "no")
+if test x$ENABLE_HANDLER != x; then
+   AC_DEFINE_UNQUOTED(ENABLE_HANDLER, [1], ["Whether to use it as a handler CGI program."])
+fi
 ])
 dnl end of acinclude.m4
